@@ -655,9 +655,9 @@ S["TCL_STUB_LIB_FILE"]="libtclstub8.6.a"
 S["TCL_LIB_SPEC"]="-L/usr/lib64 -ltcl8.6"
 S["TCL_LIB_FLAG"]="-ltcl8.6"
 S["TCL_LIB_FILE"]="libtcl8.6.so"
-S["TCL_SRC_DIR"]="/home/abuild/rpmbuild/BUILD/tcl8.6.11"
+S["TCL_SRC_DIR"]="/home/abuild/rpmbuild/BUILD/tcl8.6.12"
 S["TCL_BIN_DIR"]="/usr/lib64"
-S["TCL_PATCH_LEVEL"]=".11"
+S["TCL_PATCH_LEVEL"]=".12"
 S["TCL_VERSION"]="8.6"
 S["PKG_CFLAGS"]=" "
 S["PKG_LIBS"]=""
