@@ -1,3 +1,7 @@
+2022-06-23  Danilo Chang  <ray2501@gmail.com>
+
+    * generic/mdb.c: Update LMDB source code.
+
 2021-10-14  Danilo Chang  <ray2501@gmail.com>
 
     * Setup version to v0.4.2 (checkpoint version)
